--- a/InvenTree/order/templates/order/order_wizard/po_upload.html
+++ b/InvenTree/order/templates/order/order_wizard/po_upload.html
@@ -13,6 +13,7 @@
 {% endblock %}
 
 {% block details %}
+{% if order.status == PurchaseOrderStatus.PENDING and roles.purchase_order.change %}
 
 <p>{% blocktrans with step=wizard.steps.step1 count=wizard.steps.count %}Step {{step}} of {{count}}{% endblocktrans %}
 {% if description %}- {{ description }}{% endif %}</p>
@@ -42,6 +43,11 @@
 </form>
 {% endblock form_buttons_bottom %}
 
+{% else %}
+<div class='alert alert-danger alert-block' role='alert'>
+    {% trans "Order is already processed. Files cannot be uploaded." %}
+</div>
+{% endif %}
 {% endblock details %}
 
 {% block js_ready %}
