--- a/InvenTree/order/templates/order/order_wizard/match_parts.html
+++ b/InvenTree/order/templates/order/order_wizard/match_parts.html
@@ -99,4 +99,8 @@ $('.bomselect').select2({
     matcher: partialMatcher,
 });
 
+$('.currencyselect').select2({
+    dropdownAutoWidth: true,
+});
+
 {% endblock %}
