--- a/InvenTree/order/templates/order/order_wizard/match_fields.html
+++ b/InvenTree/order/templates/order/order_wizard/match_fields.html
@@ -65,7 +65,7 @@
             {% endfor %}
         </tr>
         {% for row in rows %}
-        {% with forloop.counter0 as row_index %}
+        {% with forloop.counter as row_index %}
         <tr>
             <td style='width: 32px;'>
                 <button class='btn btn-default btn-remove' onClick='removeRowFromBomWizard()' id='del_row_{{ row_index }}' style='display: inline; float: left;' title='{% trans "Remove row" %}'>
