--- a/InvenTree/order/templates/order/order_wizard/match_parts.html
+++ b/InvenTree/order/templates/order/order_wizard/match_parts.html
@@ -66,7 +66,7 @@
                 </td>
                 <td>
                     {% for field in form.visible_fields %}
-                        {% if field.name == row.quantity_select %}
+                        {% if field.name == row.quantity %}
                             {{ field }}
                         {% endif %}
                     {% endfor %}
@@ -79,7 +79,19 @@
                 <td>
                     {% if item.column.guess == 'Purchase_Price' %}
                         {% for field in form.visible_fields %}
-                            {% if field.name == row.price_select %}
+                            {% if field.name == row.purchase_price %}
+                                {{ field }}
+                            {% endif %}
+                        {% endfor %}
+                    {% elif item.column.guess == 'Reference' %}
+                        {% for field in form.visible_fields %}
+                            {% if field.name == row.reference %}
+                                {{ field }}
+                            {% endif %}
+                        {% endfor %}
+                    {% elif item.column.guess == 'Notes' %}
+                        {% for field in form.visible_fields %}
+                            {% if field.name == row.notes %}
                                 {{ field }}
                             {% endif %}
                         {% endfor %}
