--- a/InvenTree/part/templates/part/detail.html
+++ b/InvenTree/part/templates/part/detail.html
@@ -58,14 +58,14 @@
         <tr>
             <td></td>
             <td><strong>{% trans "Variant Of" %}</strong></td>
-            <td><a href="{% url 'part-detail' part.variant_of.id %}">{{ part.variant_of.full_name }}</a></td>
+            <td><a href="{% url 'part-detail' part.variant_of.id %}">{{ part.variant_of.full_name }}</a>{% include "clip.html"%}</td>
         </tr>
         {% endif %}
         {% if part.keywords %}
         <tr>
             <td><span class='fas fa-key'></span></td>
             <td><strong>{% trans "Keywords" %}</strong></td>
-            <td>{{ part.keywords }}</td>
+            <td>{{ part.keywords }}{% include "clip.html"%}</td>
         </tr>
         {% endif %}
         <tr>
@@ -73,7 +73,7 @@
             <td><strong>{% trans "Category" %}</strong></td>
             <td>
                 {% if part.category %}
-                <a href="{% url 'category-detail' part.category.id %}">{{ part.category.pathstring }}</a>
+                <a href="{% url 'category-detail' part.category.id %}">{{ part.category.pathstring }}</a>{% include "clip.html"%}
                 {% endif %}
             </td>
         </tr>
@@ -81,14 +81,14 @@
         <tr>
             <td><span class='fas fa-link'></span></td>
             <td><strong>{% trans "External Link" %}</strong></td>
-            <td><a href="{{ part.link }}">{{ part.link }}</a></td>
+            <td><a href="{{ part.link }}">{{ part.link }}</a>{% include "clip.html"%}</td>
         </tr>
         {% endif %}
         {% if part.default_location %}
         <tr>
             <td><span class='fas fa-map-marker-alt'></span></td>
             <td><strong>{% trans "Default Location" %}</strong></td>
-            <td><a href="{% url 'stock-location-detail' part.default_location.id %}">{{ part.default_location.pathstring }}</a></td>
+            <td><a href="{% url 'stock-location-detail' part.default_location.id %}">{{ part.default_location.pathstring }}</a>{% include "clip.html"%}</td>
         </tr>
         {% endif %}
         {% if part.default_supplier %}
@@ -104,7 +104,7 @@
         <tr>
             <td></td>
             <td><strong>{% trans "Units" %}</strong></td>
-            <td>{{ part.units }}</td>
+            <td>{{ part.units }}{% include "clip.html"%}</td>
         </tr>
         {% endif %}
         {% if part.minimum_stock > 0 %}
