feat(purchase orders): show the preferred location for each PO Line
Adds the ability for the Purchaser to specify where the item is
intentended to go when received.  If the Purchaser does not set a
preferred location, then the default location for the part is displayed.
If the item is received them where it was actually placed is shown.

NOTE: if an item is split when received only one of the resulting
StockItem location is used.

Fixes #1467
Addresses some of the requests in #551

--- a/InvenTree/order/templates/order/purchase_order_detail.html
+++ b/InvenTree/order/templates/order/purchase_order_detail.html
@@ -205,6 +205,10 @@ $("#po-table").inventreeTable({
             }
         },
         {
+            field: 'destination.pathstring',
+            title: '{% trans "Destination" %}',
+        },
+        {
             field: 'notes',
             title: '{% trans "Notes" %}',
         },
