--- a/InvenTree/part/templates/part/import_wizard/match_references.html
+++ b/InvenTree/part/templates/part/import_wizard/match_references.html
@@ -2,6 +2,7 @@
 {% load inventree_extras %}
 {% load i18n %}
 {% load static %}
+{% load crispy_forms_tags %}
 
 {% block form_alert %}
 {% if form.errors %}
@@ -57,7 +58,7 @@
                         {% with row_name=item.column.guess|lower %}
                         {% for field in form.visible_fields %}
                             {% if field.name == row|keyvalue:row_name %}
-                                {{ field }}
+                                {{ field|as_crispy_field }}
                             {% endif %}
                         {% endfor %}
                         {% endwith %}
