--- a/InvenTree/templates/version.html
+++ b/InvenTree/templates/version.html
@@ -3,3 +3,5 @@ InvenTree-Version: {% inventree_version %}
 Django Version: {% django_version %}
 {% inventree_commit_hash as hash %}{% if hash %}Commit Hash: {{ hash }}{% endif %}
 {% inventree_commit_date as commit_date %}{% if commit_date %}Commit Date: {{ commit_date }}{% endif %}
+Database: {% inventree_db_engine %}
+Debug-Mode: {% inventree_in_debug_mode %}
