docker-mode in stats

--- a/InvenTree/templates/stats.html
+++ b/InvenTree/templates/stats.html
@@ -26,6 +26,14 @@
         <td>{% trans "Server is running in debug mode" %}</td>
     </tr>
     {% endif %}
+    {% inventree_docker_mode as docker_mode %}
+    {% if docker_mode %}
+    <tr>
+        <td><span class='fab fa-docker'></span></td>
+        <td>{% trans "Docker Mode" %}</td>
+        <td>{% trans "Server is deployed using docker" %}</td>
+    </tr>
+    {% endif %}
     {% if user.is_staff %}
     <tr>
         <td><span class='fas fa-server'></span></td>
