--- a/InvenTree/part/templates/part/import_wizard/match_fields.html
+++ b/InvenTree/part/templates/part/import_wizard/match_fields.html
@@ -55,7 +55,7 @@
             <td>
                 {{ col }}
                 {% for duplicate in duplicates %}
-                    {% if duplicate == col.name %}
+                    {% if duplicate == col.value %}
                     <div class='alert alert-danger alert-block text-center' role='alert' style='padding:2px; margin-top:6px; margin-bottom:2px'>
                         <b>{% trans "Duplicate selection" %}</b>
                     </div>
