--- a/InvenTree/stock/templates/stock/item_base.html
+++ b/InvenTree/stock/templates/stock/item_base.html
@@ -14,68 +14,6 @@
 
 {% block pre_content %}
 {% include 'stock/loc_link.html' with location=item.location %}
-
-{% setting_object 'STOCK_OWNERSHIP_CONTROL' as owner_control %}
-{% if owner_control.value == "True" %}
-    {% authorized_owners item.owner as owners %}
-
-    {% if not user in owners and not user.is_superuser %}
-    <div class='alert alert-block alert-info'>
-        {% trans "You are not in the list of owners of this item. This stock item cannot be edited." %}<br>
-    </div>
-    {% endif %}
-{% endif %}
-
-{% if item.is_building %}
-<div class='alert alert-block alert-info'>
-    {% trans "This stock item is in production and cannot be edited." %}<br>
-    {% trans "Edit the stock item from the build view." %}<br>
-
-    {% if item.build %}
-    <a href="{% url 'build-detail' item.build.id %}">
-        <b>{{ item.build }}</b>
-    </a>
-    {% endif %}
-
-</div>
-{% endif %}
-
-{% if item.hasRequiredTests and not item.passedAllRequiredTests %}
-<div class='alert alert-block alert-danger'>
-    {% trans "This stock item has not passed all required tests" %}
-</div>
-{% endif %}
-
-{% for allocation in item.sales_order_allocations.all %}
-<div class='alert alert-block alert-info'>
-    {% object_link 'so-detail' allocation.line.order.id allocation.line.order as link %}
-    {% decimal allocation.quantity as qty %}
-    {% blocktrans %}This stock item is allocated to Sales Order {{ link }} (Quantity: {{ qty }}){% endblocktrans %}
-</div>
-{% endfor %}
-
-{% for allocation in item.allocations.all %}
-<div class='alert alert-block alert-info'>
-    {% object_link 'build-detail' allocation.build.id allocation.build %}
-    {% decimal allocation.quantity as qty %}
-    {% blocktrans %}This stock item is allocated to Build {{ link }} (Quantity: {{ qty }}){% endblocktrans %}
-</div>
-{% endfor %}
-
-{% if item.serialized %}
-<div class='alert alert-block alert-warning'>
-    {% trans "This stock item is serialized - it has a unique serial number and the quantity cannot be adjusted." %}
-</div>
-{% elif item.child_count > 0 %}
-<div class='alert alert-block alert-warning'>
-    {% trans "This stock item cannot be deleted as it has child items" %}
-</div>
-{% elif item.delete_on_deplete and item.can_delete %}
-<div class='alert alert-block alert-warning'>
-    {% trans "This stock item will be automatically deleted when all stock is depleted." %}
-</div>
-{% endif %}
-
 {% endblock %}
 
 {% block thumbnail %}
@@ -219,6 +157,73 @@
     {% endif %}
 </div>
 
+{% endblock %}
+
+{% block below_thumbnail %}
+<div class='info-messages'>
+
+    {% setting_object 'STOCK_OWNERSHIP_CONTROL' as owner_control %}
+    {% if owner_control.value == "True" %}
+        {% authorized_owners item.owner as owners %}
+
+        {% if not user in owners and not user.is_superuser %}
+        <div class='alert alert-block alert-info'>
+            {% trans "You are not in the list of owners of this item. This stock item cannot be edited." %}<br>
+        </div>
+        {% endif %}
+    {% endif %}
+
+    {% if item.is_building %}
+    <div class='alert alert-block alert-info'>
+        {% trans "This stock item is in production and cannot be edited." %}<br>
+        {% trans "Edit the stock item from the build view." %}<br>
+
+        {% if item.build %}
+        <a href="{% url 'build-detail' item.build.id %}">
+            <b>{{ item.build }}</b>
+        </a>
+        {% endif %}
+
+    </div>
+    {% endif %}
+
+    {% if item.hasRequiredTests and not item.passedAllRequiredTests %}
+    <div class='alert alert-block alert-danger'>
+        {% trans "This stock item has not passed all required tests" %}
+    </div>
+    {% endif %}
+
+    {% for allocation in item.sales_order_allocations.all %}
+    <div class='alert alert-block alert-info'>
+        {% object_link 'so-detail' allocation.line.order.id allocation.line.order as link %}
+        {% decimal allocation.quantity as qty %}
+        {% blocktrans %}This stock item is allocated to Sales Order {{ link }} (Quantity: {{ qty }}){% endblocktrans %}
+    </div>
+    {% endfor %}
+
+    {% for allocation in item.allocations.all %}
+    <div class='alert alert-block alert-info'>
+        {% object_link 'build-detail' allocation.build.id allocation.build %}
+        {% decimal allocation.quantity as qty %}
+        {% blocktrans %}This stock item is allocated to Build {{ link }} (Quantity: {{ qty }}){% endblocktrans %}
+    </div>
+    {% endfor %}
+    
+    {% if item.serialized %}
+    <div class='alert alert-block alert-warning'>
+        {% trans "This stock item is serialized - it has a unique serial number and the quantity cannot be adjusted." %}
+    </div>
+    {% elif item.child_count > 0 %}
+    <div class='alert alert-block alert-warning'>
+        {% trans "This stock item cannot be deleted as it has child items" %}
+    </div>
+    {% elif item.delete_on_deplete and item.can_delete %}
+    <div class='alert alert-block alert-warning'>
+        {% trans "This stock item will be automatically deleted when all stock is depleted." %}
+    </div>
+    {% endif %}
+    
+</div>
 {% endblock %}
 
 {% block page_details %}
