--- a/InvenTree/templates/two_column.html
+++ b/InvenTree/templates/two_column.html
@@ -27,6 +27,8 @@
                 <!-- Data next to image goes here -->
                 {% endblock %}
             </div>
+            {% block below_thumbnail %}
+            {% endblock %}
         </div>
         <div class='col-sm-6'>
             {% block page_details %}
