--- a/InvenTree/templates/InvenTree/settings/currencies.html
+++ b/InvenTree/templates/InvenTree/settings/currencies.html
@@ -26,18 +26,15 @@
     </div>
 </div>
 
-<table class='table table-striped table-condensed' id='exchange-rates'>
-</table>
-
-<form action="{% url 'refresh-exchange-rates' %}" method="post">
+<form action="{% url 'settings-currencies' %}" method="post">
     {% csrf_token %}
-    <button type="submit" class='btn btn-primary'>{% trans "Refresh Exchange Rates" %}</button>
+    {% load crispy_forms_tags %}
+    {% crispy form %}
+    {% if exchange_backend == 'fixer.io' %}
+        <button type="submit" class='btn btn-primary'>{% trans "Refresh Exchange Rates" %}</button>
+    {% else %}
+        <button type="submit" class='btn btn-primary'>{% trans "Update Exchange Rates" %}</button>
+    {% endif %}
 </form>
 
-{% endblock %}
-
-{% block js_ready %}
-{{ block.super }}
-{% comment %} TODO: Update exchange-rates table! {% endcomment %}
-{% comment %} Or do it using context instead of JS? {% endcomment %}
 {% endblock %}
