Template fix/improvement

--- a/InvenTree/templates/InvenTree/settings/currencies.html
+++ b/InvenTree/templates/InvenTree/settings/currencies.html
@@ -16,7 +16,9 @@
     {% include "InvenTree/settings/header.html" %}
     <tbody>
         {% include "InvenTree/settings/setting.html" with key="INVENTREE_DEFAULT_CURRENCY" icon="fa-dollar-sign" %}
+        {% if 'fixer' in exchange_backend %}
         {% include "InvenTree/settings/setting.html" with key="INVENTREE_FIXER_API_KEY" icon="fa-key" %}
+        {% endif %}
     </tbody>
 </table>
 
@@ -31,7 +33,7 @@
     {% csrf_token %}
     {% load crispy_forms_tags %}
     {% crispy form %}
-    {% if exchange_backend == 'fixer.io' %}
+    {% if 'fixer' in exchange_backend %}
         <button type="submit" class='btn btn-primary'>{% trans "Refresh Exchange Rates" %}</button>
     {% else %}
         <button type="submit" class='btn btn-primary'>{% trans "Update Exchange Rates" %}</button>
