--- a/InvenTree/templates/about.html
+++ b/InvenTree/templates/about.html
@@ -30,6 +30,11 @@
                                 </td>
                             </tr>
                             <tr>
+                                <td><span class='fas fa-code'></span></td>
+                                <td>{% trans "API Version" %}</td>
+                                <td>{% inventree_api_version %}{% include "clip.html" %}</td>
+                            </tr>
+                            <tr>
                                 <td><span class='fas fa-hashtag'></span></td>
                                 <td>{% trans "Django Version" %}</td>
                                 <td><a href="https://www.djangoproject.com/">{% django_version %}</a>{% include "clip.html" %}</td>
