--- a/InvenTree/part/templates/part/order_prices.html
+++ b/InvenTree/part/templates/part/order_prices.html
@@ -1,6 +1,7 @@
 {% extends "part/part_base.html" %}
 {% load static %}
 {% load i18n %}
+{% load crispy_forms_tags %}
 {% load inventree_extras %}
 
 {% block menubar %}
@@ -12,96 +13,94 @@
 {% endblock %}
 
 {% block details %}
+{% settings_value "INVENTREE_DEFAULT_CURRENCY" as currency %}
 
-<form method="post" action='' class='js-modal-form' enctype="multipart/form-data">
-    {% csrf_token %}
-    {% load crispy_forms_tags %}
-    {% crispy form %}
-</form>
+{% crispy form %}
 
-
+<div class="row"><div class="col col-md-6">
+<h4>{% trans "Pricing ranges" %}</h4>
+<table class='table table-striped table-condensed'>
 {% if part.supplier_count > 0 %}
-    <h4>{% trans 'Supplier Pricing' %}</h4>
-    <table class='table table-striped table-condensed table-price-three'>
     {% if min_total_buy_price %}
-    <tr>
-        <td><b>{% trans 'Unit Cost' %}</b></td>
-        <td>Min: {% include "price.html" with price=min_unit_buy_price %}</td>
-        <td>Max: {% include "price.html" with price=max_unit_buy_price %}</td>
-    </tr>
-    {% if quantity > 1 %}
-    <tr>
-        <td><b>{% trans 'Total Cost' %}</b></td>
-        <td>Min: {% include "price.html" with price=min_total_buy_price %}</td>
-        <td>Max: {% include "price.html" with price=max_total_buy_price %}</td>
-    </tr>
-    {% endif %}
+        <tr>
+            <td><b>{% trans 'Supplier Pricing' %}</b></td>
+            <td>{% trans 'Unit Cost' %}</td>
+            <td>Min: {% include "price.html" with price=min_unit_buy_price %}</td>
+            <td>Max: {% include "price.html" with price=max_unit_buy_price %}</td>
+        </tr>
+        {% if quantity > 1 %}
+        <tr>
+            <td></td>
+            <td>{% trans 'Total Cost' %}</td>
+            <td>Min: {% include "price.html" with price=min_total_buy_price %}</td>
+            <td>Max: {% include "price.html" with price=max_total_buy_price %}</td>
+        </tr>
+        {% endif %}
     {% else %}
-    <tr>
-        <td colspan='3'>
-            <span class='warning-msg'><i>{% trans 'No supplier pricing available' %}</i></span>
-        </td>
-    </tr>
+        <tr>
+            <td colspan='4'>
+                <span class='warning-msg'><i>{% trans 'No supplier pricing available' %}</i></span>
+            </td>
+        </tr>
     {% endif %}
-    </table>
 {% endif %}
 
 {% if part.bom_count > 0 %}
-    <h4>{% trans 'BOM Pricing' %}</h4>
-    <table class='table table-striped table-condensed table-price-three'>
     {% if min_total_bom_price %}
-    <tr>
-        <td><b>{% trans 'Unit Cost' %}</b></td>
-        <td>Min: {% include "price.html" with price=min_unit_bom_price %}</td>
-        <td>Max: {% include "price.html" with price=max_unit_bom_price %}</td>
-    </tr>
-    {% if quantity > 1 %}
-    <tr>
-        <td><b>{% trans 'Total Cost' %}</b></td>
-        <td>Min: {% include "price.html" with price=min_total_bom_price %}</td>
-        <td>Max: {% include "price.html" with price=max_total_bom_price %}</td>
-    </tr>
-    {% endif %}
-    {% if part.has_complete_bom_pricing == False %}
-    <tr>
-        <td colspan='3'>
-            <span class='warning-msg'><i>{% trans 'Note: BOM pricing is incomplete for this part' %}</i></span>
-        </td>
-    </tr>
-    {% endif %}
+        <tr>
+            <td><b>{% trans 'BOM Pricing' %}</b></td>
+            <td>{% trans 'Unit Cost' %}</td>
+            <td>Min: {% include "price.html" with price=min_unit_bom_price %}</td>
+            <td>Max: {% include "price.html" with price=max_unit_bom_price %}</td>
+        </tr>
+        {% if quantity > 1 %}
+            <tr>
+                <td></td>
+                <td>{% trans 'Total Cost' %}</td>
+                <td>Min: {% include "price.html" with price=min_total_bom_price %}</td>
+                <td>Max: {% include "price.html" with price=max_total_bom_price %}</td>
+            </tr>
+        {% endif %}
+        {% if part.has_complete_bom_pricing == False %}
+            <tr>
+                <td colspan='4'>
+                    <span class='warning-msg'><i>{% trans 'Note: BOM pricing is incomplete for this part' %}</i></span>
+                </td>
+            </tr>
+        {% endif %}
     {% else %}
-    <tr>
-        <td colspan='3'>
-            <span class='warning-msg'><i>{% trans 'No BOM pricing available' %}</i></span>
-        </td>
-    </tr>
+        <tr>
+            <td colspan='4'>
+                <span class='warning-msg'><i>{% trans 'No BOM pricing available' %}</i></span>
+            </td>
+        </tr>
     {% endif %}
-    </table>
 {% endif %}
 
 {% if total_part_price %}
-    <h4>{% trans 'Sale Price' %}</h4>
-    <table class='table table-striped table-condensed table-price-two'>
-        <tr>
-            <td><b>{% trans 'Unit Cost' %}</b></td>
-            <td>{% include "price.html" with price=unit_part_price %}</td>
-        </tr>
-        <tr>
-            <td><b>{% trans 'Total Cost' %}</b></td>
-            <td>{% include "price.html" with price=total_part_price %}</td>
-        </tr>
-    </table>
+    <tr>
+        <td><b>{% trans 'Sale Price' %}</b></td>
+        <td>{% trans 'Unit Cost' %}</td>
+        <td colspan='2'>{% include "price.html" with price=unit_part_price %}</td>
+    </tr>
+    <tr>
+        <td></td>
+        <td>{% trans 'Total Cost' %}</td>
+        <td colspan='2'>{% include "price.html" with price=total_part_price %}</td>
+    </tr>
 {% endif %}
+</table>
 
-    {% if min_unit_buy_price or min_unit_bom_price %}
-    {% else %}
-        <div class='alert alert-danger alert-block'>
-            {% trans 'No pricing information is available for this part.' %}
-        </div>
-    {% endif %}
-    <hr>
+{% if min_unit_buy_price or min_unit_bom_price %}
+{% else %}
+    <div class='alert alert-danger alert-block'>
+        {% trans 'No pricing information is available for this part.' %}
+    </div>
+{% endif %}
+</div></div>
 
 {% if price_history %}
+    <hr>
     <h4>{% trans 'Stock Pricing' %}</h4>
     {% if price_history|length > 1 %}
         <div style="max-width: 99%; min-height: 300px">
